# mc-captcha

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml  index.html
src/: cli.rs  hcaptcha_verify.rs  lang.rs  main.rs  question.rs  rcon_client.rs
src/web/: commit_user.rs  index.rs  mod.rs
src/web_backend/: builder.rs  commit_user.rs  index.rs  mod.rs
templates/: base.html.tera  dialog.html.tera  index.html.tera
