[package]
name = "mc-captcha"
version = "0.1.0"
edition = "2021"

[dependencies]
hcaptcha = "2.7.6"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
rcon-client = "0.1.2"
clap = { version = "4.5.21", features = ["derive", "env"] }
qwreey-utility-rs = "0.1.0"
tokio = "1.41.1"
